add thememerged working

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,12 +7,35 @@
   src: url('/fonts/W95FA.otf');
 }
 
+@font-face {
+  font-family: 'IBM3270';
+  src: url('/fonts/IBM3270.otf');
+}
+
 .W95FA {
   font-family: 'W95FA', Arial;
 }
 
+.IBM3270 {
+  font-family: 'IBM3270', Arial;
+}
+
+@layer base {
+  :root {
+    --font-family: 'W95FA', Arial;
+  }
+  .theme-love {
+    --font-family: 'W95FA', Arial;
+  }
+  .theme-vaporwave-arcade {
+    --font-family: 'IBM3270', Arial;
+  }
+}
+
+
+
 body {
-  font-family: 'W95FA';
+  font-family: var(--font-family);
   background-color: black;
 }
 
@@ -465,5 +488,49 @@ input:focus {
 @media only screen and (max-width: 600px) {
   .dialog {
    width: 100% !important;
+  }
+}
+
+#scroll-container {
+  border: 3px solid black;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+#scroll-text {
+  text-align: right;
+
+  /* animation properties */
+  -moz-transform: translateX(100%);
+  -webkit-transform: translateX(100%);
+  transform: translateX(100%);
+  
+  -moz-animation: my-animation 5s linear infinite;
+  -webkit-animation: my-animation 5s linear infinite;
+  animation: my-animation 5s linear infinite;
+}
+
+/* for Firefox */
+@-moz-keyframes my-animation {
+  from { -moz-transform: translateX(100%); }
+  to { -moz-transform: translateX(-100%); }
+}
+
+/* for Chrome */
+@-webkit-keyframes my-animation {
+  from { -webkit-transform: translateX(100%); }
+  to { -webkit-transform: translateX(-100%); }
+}
+
+@keyframes my-animation {
+  from {
+    -moz-transform: translateX(100%);
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
+  }
+  to {
+    -moz-transform: translateX(-100%);
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
   }
 }
